src/css/styles.css
* {
  border-radius: 25px;
}


body {
  font-family: 'Lato', sans-serif;
  height: 100%;
}

p {
  font-size: 20px;
}


.left-contents {
  position: absolute;
  top: 0;
  left:0;
  margin-top: 10px;
  margin-right: 10px;
  display: flex;
	flex-direction: column;
	flex-wrap: wrap;
	justify-content: center;
	align-items: center;
}

h1, h2 {
  font-size: 30px;
  margin: 10px;
}


.top-bar {
  border-radius: 0px;
  position:fixed;
  top: 0;
  right: 0;
  left: 0;
  background-color: black;
  color: white;
  height: 125px;
}

.dashboard-buttons {
  margin: 10px;
  font-size: 25px;

}

.right-contents {
  margin-top: 0;
  margin: 0;
  padding: 0;
  display: flex;
  height: 60px;
  justify-content: flex-end;
  flex-wrap: wrap;
  padding-bottom: 20px;
}

.box-styling {
  margin: 150px;
  display: flex;
  justify-content: space-between;
  height: 400px;
}

/* background-color: #302244;
  border: 5px solid transparent;
  border-image: linear-gradient(to bottom right, #b827fc 0%, #2c90fc 25%, #b8fd33 50%, #fec837 75%, #fd1892 100%);
  border-image-slice: 1;
  height: 200px;
  margin: 20px auto;
  width: 200px; */

form {
  width: 700px;
  height: 470px;
  text-align: center;
}

label {
  font-size: 25px;
  font-weight: bold;
}

input {
  font-size: 20px;
  width: 200px;
  height: 30px;
  margin-bottom: 20px;
  font-family: 'Lato', sans-serif;
}

@keyframes slidebg {
  to {
    background-position:20vw;
  }
}

.rainbow-5:hover{
   background-image: linear-gradient(90deg, #00C0FF 0%, #FFCF00 49%, #FC4F4F 80%, #00C0FF 100%);
   animation:slidebg 5s linear infinite;
}

.booking-date-input {
  padding-bottom: 10px;
}

fieldset {
  display: flex;
  justify-content: center;
  align-items: center;
  border: 5px solid transparent;
  border-image: linear-gradient(to bottom right, #b827fc 0%, #2c90fc 25%, #b8fd33 50%, #fec837 75%, #fd1892 100%);
  border-image-slice: 1;
  border-radius: 25px;
}

.trip-request-box {
  width: 700px;
  /* height: 100%; */
  display: flex;
  justify-content: center;
  align-items: center;
  /* margin-left: 50px; */
}

.all-user-trips {
  width: 400px;
  height: 500px;
  text-align: center;
  margin-right: 100px;
  font-weight: bold;
}

.welcome-text {
  display: flex;
  justify-content: center;
  padding: 0;
  margin: 0;
}

h3, h4 {
  margin: 0;
}

/* h4 {
  margin-left: 30px;
} */

.trip-type,
.dashboard-buttons,
.submit-trip,
.input {
  cursor: pointer;
}

.hidden {
  display: none;
}

.grid {
  border: 2px black;
  display: grid;
  justify-content: center;
  align-content: center;
  grid-template-columns: repeat(3, 250px);
  grid-template-rows: repeat(3, 270px);
  size: 80px;
  grid-gap: 30px;
  padding: 0px;
  margin: 0px;
}

.location,
.trip-date {
  color: black;
}

.grid-contents{
  width: 700px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.box {
  background-color: white;
  padding: 0;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
  border: 2px red;
  text-align: center;
  border-radius: 25px;
}

.user-dashboard-display {
  display: flex;
  align-items: center;
  justify-content: center;
}

.style-plan-fieldset {
  margin-top: 100px;
  width: 700px;
}

.message-display {
  width: 870px;
  align-items: center;
  text-align: center;
  margin-right: 200px;
}

.trip-type {
  font-size: 25px;
  height: 40px;
  align-items: center;
  margin: 0px;
}

.trip-type-styling {
  margin-top: 70px;
  margin-right: 100px;
}

.opacity {
  opacity: 0.5;

}

.your-trips {
  margin-left: 0px;
  margin-right: 100px;
  font-size: 40px;
  border: 3px solid #FFADAD;
  background-color: rgba(255, 0, 0, 0.1);
}

.instructions {
  margin: 0px;
  font-size: 15px;
  border: 3px solid #FFD6A5;
  background-color: rgba(255, 165, 0, 0.08);
}

.past {
  margin-top: 25px;
  background: #FDFFB6;
  border: 3px solid #FDFFB6;
  background-color: rgba(255, 255, 0, 0.08);
}

.present {
  border: 3px solid #CAFFBF;
  background-color: rgba(0, 128, 0, 0.08);
}

.upcoming {
  border: 3px solid #9BF6FF;
  background-color: rgba(0, 255, 255, 0.08);
}

.pending {
  margin-bottom: 35px;
  border: 3px solid #BDB2FF;
  background-color: rgba(128, 0, 128, 0.08);
}

.yearly-cost-style {
  border: 3px solid #FFC6FF;
  background-color: rgba(255, 0, 255, 0.08);
}

.zoom:hover {
   transform: scale(1.5);
}

.text {
  font-size: 15px;
}

legend {
  font-size: 40px;
  font-weight: bold;
  margin-bottom: 10px;
}

.img-container {

}

.text-container {

}

.no-trips-display,
.trip-confirmation-message {
  width: 810px;
  /* margin-left: 100px; */
  font-size: 35px;
}

.price-estimate {
  margin-top: 100px;
  font-size: 30px;
}

/* #f8f8ff off white
#FFADAD red
#FFD6A5 orange
#FDFFB6 yellow
#CAFFBF green
#9BF6FF blue
#BDB2FF purple
#FFC6FF pink */

